<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ackermann_to_twist</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="akdommers@todo.todo">akdommers</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpy</depend>
  <depend>ackermann_msgs</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_image</depend>
  <depend>ros_gz_sim</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
