<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

	<name>obstacle_msgs</name>
	<version>0.1.0</version>
	<description>
		Specifies standard obstacle messages.
	</description>
	<maintainer email="klapajar@fel.cvut.cz">Jaroslav Klapálek</maintainer>
	<license>Apache License 2.0</license>
	<author email="klapajar@fel.cvut.cz">Jaroslav Klapálek</author>

	<buildtool_depend>ament_cmake</buildtool_depend>
	<buildtool_depend>rosidl_default_generators</buildtool_depend>

	<build_depend>std_msgs</build_depend>
	<build_depend>geometry_msgs</build_depend>

	<exec_depend>std_msgs</exec_depend>
	<exec_depend>geometry_msgs</exec_depend>
	<exec_depend>rosidl_default_runtime</exec_depend>

	<member_of_group>rosidl_interface_packages</member_of_group>

	<export>
		<build_type>ament_cmake</build_type>
	</export>

</package>
