<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

	<name>plan_msgs</name>
	<version>0.0.1</version>
	<description>
		The plan_msgs package, that contains message types used
    	for planning the actions for the vehicle.

    	This package is a follow up from 'trajectory' (also 'trajectory_msgs'),
    	but this name was not selected as there is already a package with
    	the same name in the official ROS repository.
	</description>
	<maintainer email="klapajar@fel.cvut.cz">Jaroslav Klapálek</maintainer>
	<license>Apache License 2.0</license>
	<author email="kopecdav@fel.cvut.cz">David Kopecký</author>

	<buildtool_depend>ament_cmake</buildtool_depend>
	<buildtool_depend>rosidl_default_generators</buildtool_depend>

	<build_depend>std_msgs</build_depend>
	<build_depend>geometry_msgs</build_depend>

	<exec_depend>std_msgs</exec_depend>
	<exec_depend>geometry_msgs</exec_depend>
	<exec_depend>rosidl_default_runtime</exec_depend>

	<member_of_group>rosidl_interface_packages</member_of_group>

	<export>
		<build_type>ament_cmake</build_type>
	</export>

</package>
